# rag-evaluation

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/commands/: test.md
.claude/skills/add-strategy/: SKILL.md
.claude/skills/rag-eval-report/: SKILL.md
.github/workflows/: ci.yml
configs/: config.yaml
data/eval/: eval_set.jsonl  judge_labels.jsonl  labeling_worksheet.jsonl
docs/: architecture-decisions.md
results/: 20260615T005622Z_ablation_48a41165.md  baseline.json
scripts/: judge_agreement.py  label_examples.py  measure_baseline.py  run_baseline_dense.py  run_benchmark.py
src/rag_eval/: api.py  apiclient.py  cli.py  config.py
src/rag_eval/evaluation/: __init__.py  ablation.py  cost.py  dataset.py  harness.py  judge.py  metrics.py  report.py  rubric.py  synth.py
src/rag_eval/gate/: __init__.py  __main__.py  regression.py
src/rag_eval/generation/: generator.py  llm.py  prompts.py
src/rag_eval/generation/prompts/: hyde.txt  rubric_system.txt  rubric_user.txt  synth_answerable.txt  synth_unanswerable.txt  system.txt  user.txt
src/rag_eval/ingest/: chunk.py  download.py  embed.py  index.py  parse.py  pipeline.py
src/rag_eval/retrieval/: base.py  bm25.py  dense.py  hybrid.py  hyde.py  registry.py  rerank.py
tests/: test_ablation.py  test_api.py  test_apiclient.py  test_app.py  test_cli.py  test_config.py  test_cost.py  test_dataset.py  test_gate.py  test_generation.py  test_harness.py  test_ingest.py  test_metrics.py  test_retrieval.py  test_rubric.py
